// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option go_package = "./proto";
package datacommons.v1;


message ImportGroupCursor {
  // The index of the import group, starts from 0.
  int32 import_group = 1;
  // The index of the page, starts from 0.
  int32 page = 2;
  // The position of the next read item in the current page, starts from 0.
  int32 item = 3;
}

message ImportGroupCursorGroup {
  // Entity DCID or other information that identifies the ImportGroupCursorGroup.
  string key = 1;
  repeated ImportGroupCursor cursors = 2;
}

message PaginationInfo {
  repeated ImportGroupCursorGroup cursor_groups = 1;
}